--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ football.json
 Text_with_data.txt
 user_logs.log
 test.txt
+report.html
 
 # Environments
 venv/
@@ -20,3 +21,5 @@ venv/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+
+assets/
